--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,16 @@
 body {
   background-color: #fffbcf;
 }
+
+@keyframes scroll {
+  0% {
+    transform: translateX(0%);
+  }
+  100% {
+    transform: translateX(-50%);
+  }
+}
+
+.animate-scroll {
+  animation: scroll 20s linear infinite;
+}
