--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@
 
 body {
   background-color: #fffbcf;
+  overflow-x: hidden;
 }
 
 @keyframes scroll {
@@ -14,5 +15,101 @@ body {
 }
 
 .animate-scroll {
-  animation: scroll 20s linear infinite;
+  animation: scroll 40s linear infinite;
+}
+
+@keyframes walk {
+  0% {
+    transform: translateX(-100%);
+  }
+  100% {
+    transform: translateX(100vw);
+  }
+}
+
+@keyframes bob {
+  0%,
+  100% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(-0.5px); /* smaller bob height */
+  }
+}
+
+/* Walking class */
+.animate-walk {
+  animation: walk 95s linear infinite;
+  position: absolute;
+}
+
+/* Bobbing class */
+.animate-bob {
+  animation: bob 2.2s ease-in-out infinite;
+}
+
+.front-leg,
+.back-leg {
+  transform-origin: center top;
+}
+
+.front-leg {
+  animation: leg-step 1s ease-in-out infinite;
+}
+
+.back-leg {
+  animation: leg-step 1s ease-in-out infinite;
+  animation-delay: 0.5s;
+}
+
+@keyframes leg-step {
+  0%,
+  100% {
+    transform: rotate(5deg);
+  }
+  50% {
+    transform: rotate(-10deg);
+  }
+}
+
+.tail-group {
+  transform-origin: 90% 50%;
+  animation: tail-wag 1s ease-in-out infinite;
+}
+
+@keyframes tail-wag {
+  0%,
+  100% {
+    transform: rotate(10deg);
+  }
+  50% {
+    transform: rotate(-15deg);
+  }
+}
+
+.monkey {
+  position: absolute;
+  right: 0;
+  bottom: -25px;
+  z-index: 40;
+  pointer-events: none;
+}
+
+.swing-group {
+  transform-origin: top right;
+  animation: swing 2s ease-in-out infinite;
+}
+
+@keyframes swing {
+  0%,
+  100% {
+    transform: rotate(8deg);
+  }
+  50% {
+    transform: rotate(-8deg);
+  }
+}
+
+.vine {
+  transform-origin: top right;
 }
